# Project-Morpheus-Cognitive-Memory-Database

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/api/: Cargo.toml
crates/api/src/: lib.rs  rest.rs
crates/api/tests/: integration_tests.rs
crates/benchmarks/: Cargo.toml
crates/benchmarks/benches/: comparison_bench.rs  crdt_bench.rs  resolver_bench.rs  retention_bench.rs
crates/benchmarks/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: crdt.rs  lib.rs  memory.rs  retention.rs  types.rs
crates/hdc/: Cargo.toml  rust-toolchain.toml
crates/hdc/benches/: hdc_bench.rs
crates/hdc/src/: encoder.rs  hypervector.rs  lib.rs  operations.rs  simd.rs  similarity.rs
crates/manager/: Cargo.toml
crates/manager/src/: config.rs  consolidation.rs  lib.rs
crates/resolver/: Cargo.toml
crates/resolver/src/: deterministic.rs  lib.rs  strategies.rs  types.rs
crates/search/: Cargo.toml
crates/search/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: episodic.rs  lib.rs  memory.rs  semantic.rs
docs/: API.md  ARCHITECTURE.md  BENCHMARK_REPORT.md  SPECIFICATION.md
