[workspace]
members = [
    "crates/core",
    "crates/storage",
    "crates/hdc",
    "crates/resolver",
    "crates/search",
    "crates/manager",
    "crates/api",
    "crates/benchmarks",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Project Morpheus Team"]
license = "MIT"
repository = "https://github.com/dimaskynet/Project-Morpheus-Cognitive-Memory-Database"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.41", features = ["full"] }
async-trait = "0.1"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
rkyv = { version = "0.7", features = ["validation"] }

# Storage
arrow = "53.0"
parquet = "53.0"
lancedb = "0.13"

# Graph database
kuzu = "0.7"

# Vector operations & HDC
bitvec = "1.0"
ndarray = "0.16"
packed_simd_2 = "0.3"

# CRDT
crdts = "7.3"

# Math & Algorithms
rayon = "1.10"
dashmap = "6.1"
parking_lot = "0.12"

# Testing
criterion = "0.5"
proptest = "1.6"
rstest = "0.23"

# Python bindings (will be used in api crate)
pyo3 = { version = "0.23", features = ["extension-module"] }

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3

[profile.bench]
inherits = "release"

[profile.test]
opt-level = 1