[package]
name = "cmd-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Internal
cmd-core = { path = "../core" }
cmd-storage = { path = "../storage" }
cmd-hdc = { path = "../hdc" }
cmd-resolver = { path = "../resolver" }
cmd-manager = { path = "../manager" }
cmd-search = { path = "../search" }

# Web framework
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Python bindings
pyo3 = { workspace = true, optional = true }

# Utils
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
chrono = "0.4"
uuid = { version = "1.18", features = ["v7"] }

[features]
python = ["pyo3"]

[dev-dependencies]
hyper = "1.5"
rstest = { workspace = true }