[package]
name = "cmd-benchmarks"
version = "0.1.0"
edition = "2024"
authors = ["Project Morpheus Team"]
license = "MIT"

[dependencies]
cmd-core = { path = "../core" }
cmd-resolver = { path = "../resolver" }

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Utils
serde_json = "1.0"
chrono = "0.4"
uuid = { version = "1.18", features = ["v4"] }

[[bench]]
name = "crdt_bench"
harness = false

[[bench]]
name = "resolver_bench"
harness = false

[[bench]]
name = "retention_bench"
harness = false

[[bench]]
name = "comparison_bench"
harness = false