[package]
name = "cmd-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Core
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
rkyv = { workspace = true }

# Math & Time
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "v7", "serde"] }

# Collections
dashmap = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
proptest = { workspace = true }
tokio-test = "0.4"