[package]
name = "cmd-manager"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Internal crates
cmd-core = { path = "../core" }
cmd-storage = { path = "../storage" }
cmd-search = { path = "../search" }
cmd-resolver = { path = "../resolver" }
cmd-hdc = { path = "../hdc" }

# Async
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }

# Utils
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
tokio-test = "0.4"
