[package]
name = "cmd-search"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Core dependencies
cmd-core = { path = "../core" }
cmd-hdc = { path = "../hdc" }

# Utils
chrono = { version = "0.4", features = ["serde"] }
dashmap = { workspace = true }

[dev-dependencies]
uuid = { version = "1.18", features = ["v4"] }
