[package]
name = "cmd-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cmd-core = { path = "../core" }

# Storage (optional features)
lancedb = { workspace = true, optional = true }
arrow = { workspace = true, optional = true }
parquet = { workspace = true, optional = true }
kuzu = { workspace = true, optional = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utils
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }

[features]
default = []
lancedb = ["dep:lancedb", "dep:arrow", "dep:parquet"]
kuzu = ["dep:kuzu"]
full = ["lancedb", "kuzu"]

[dev-dependencies]
tempfile = "3.10"
rstest = { workspace = true }